Override ANTLR with version 2.7.7.redhat-7 so that it's compiled with JDK8